Fix side-bar on Safari

--- a/src/components/ui/dialog-item.scss
+++ b/src/components/ui/dialog-item.scss
@@ -8,7 +8,9 @@
   justify-content: center;
   padding: 0.5rem 0;
   border-radius: 11px;
+  user-select: none;
   cursor: pointer;
+  @extend .noselect;
 
   .acitve,
   &:hover,
