--- a/src/styles.global.scss
+++ b/src/styles.global.scss
@@ -98,6 +98,7 @@ h4 {
   transform: translate3d(0, 0, 0);
 
   &:after {
+    cursor: pointer;
     content: "";
     display: block;
     position: absolute;
@@ -133,6 +134,16 @@ h4 {
   to {
     transform: rotate(1turn);
   }
+}
+
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                        supported by Chrome, Opera and Firefox */
 }
 
 .hideSVG {
